# infracost

./: .dockerignore  .env  .gitignore  .golangci.bck.yml  .golangci.yml  .terraform.lock.hcl  .terraformrc  About API versioning  CONTRIBUTING.md  Contribuyendo a Infracost  Dockerfile  Dockerfile.ci  Dockerfile.wolfi  Dockerfile.wolfi-ci  Dockerfile.wolfi-latest  LICENSE  Licencia Apache  Makefile  README.md  Readme.md  SECURITY.md  Versiones de API  go.mod  go.sum  infracost-example.yml  infracost-output.json  infracost-report.html  infracost-usage-defaults.large.yml  infracost-usage-defaults.medium.yml  infracost-usage-defaults.small.yml  infracost-usage-defaults.yml  infracost-usage-example.yml  main.go  main.tf  shortTitle  usage-file-example.yml
.devcontainer/: GETTING_STARTED.md  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  resource-request.md
.github/workflows/: check-resources.yml  code-scanning.yml  create-docker-prerelease.yml  create-pr-assets.yml  create-prerelease.yml  create-release-test.yml  create-release.yml  create-test-image.yml  docker.yml  generate-docs.yml  go.yml  post-release.yml  test-arm-parser.yml  test-arm-template-provider.yml  update-download-redirects.yml
cmd/generate-docs/: main.go
cmd/infracost/: auth.go  auth_login_test.go  auth_test.go  breakdown.go  breakdown_test.go  cmd_test.go  comment.go  comment_azure_repos.go  comment_azure_repos_test.go  comment_bitbucket.go  comment_bitbucket_test.go  comment_github.go  comment_github_test.go  comment_gitlab.go  comment_gitlab_test.go  comment_test.go  completion.go  completion_test.go  configure.go  configure_test.go  default.go  deprecations.go  diff.go  diff_test.go  feedback.go  fig_autocomplete.go  flags.go  generate.go  generate_test.go  hcl_test.go  help_test.go  init.go  main.go  output.go  output_test.go  register.go  register_test.go  report.go  root_deprecated.go  run.go  (+5 more)
cmd/infracost-generate-docs/: main.go
cmd/jsonschema/: jsonschema_test.go  main.go
cmd/migrator/: main.go
cmd/plancosts/: main.go
cmd/resourcecheck/: main.go
cmd/resourcegen/: main.go
cmd/testdata/: instance.json  templ.tftpl
contributing/: add_new_resource_guide.md  pulumi.md  resource_mapping_guide.md
costtest/: suite.go
docs/templates/: supported_resources.md
example/terraform/: data.tf  main.tf
examples/cf2tf/: main.tf
examples/cloudformation/: cf.json  infracost-usage.yml
examples/cost-optimized/: README.md  main.tf  (+1 more)
schema/: config.schema.json  infracost.schema.json
scripts/: 2.productFamily.sh  3.attributes-key.sh  3.attributes.sh  4.attributes-value.sh  README.md  breakdown_all.sh  comment.sh  diff_all.sh  get_version.sh  infracost-comment.sh  install.sh  install_provider.sh  report_all.sh  requirements.sh
tools/pulumi/: _CONVENTIONS.xml  converter.py  devbox.json  pyproject.toml
(+4249 files in other folders)
