[project]
name = "infracost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider",
    "websockets>=13.1",
    "python-dotenv>=1.0.1",
    "openai>=1.51.0",
    "pyaudio>=0.2.14",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "firecrawl-py>=1.3.0",
    "pillow>=10.4.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "duckdb>=1.1.2",
    "matplotlib>=3.9.2",
    "grpcio>=1.56.0",
    "grpcio-tools>=1.56.0",
    "pulumi",
    "pulumi_aws",
    "GitPython",
    "openai",
    "pydantic",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "attrs==24.2.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "configargparse==1.7",
    "diff-match-patch==20241021",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "filelock==3.16.1",
    "flake8==7.1.1",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "grep-ast==0.3.3",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "huggingface-hub==0.26.1",
    "idna==3.10",
    "importlib-metadata==7.2.1",
    "importlib-resources==6.4.5",
    "jinja2==3.1.4",
    "jiter==0.6.1",
    "json5==0.9.25",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "litellm==1.50.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "openai==1.52.2",
    "packaging==24.1",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydub==0.25.1",
    "pyflakes==3.2.0",
    "pygments==2.18.0",
    "pypandoc==1.14",
    "pyperclip==1.9.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "regex==2024.9.11",
    "requests==2.32.3",
    "rich==13.9.3",
    "rpds-py==0.20.0",
    "scipy==1.13.1",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "sounddevice==0.5.1",
    "soundfile==0.12.1",
    "soupsieve==2.6",
    "tiktoken==0.8.0",
    "tokenizers==0.19.1",
    "tqdm==4.66.5",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "yarl==1.16.0",
    "zipp==3.20.2",
    "boto3",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
